manifests/jovian-prod/freshrss/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: jovian-prod
  labels:
    app: freshrss
    service: content
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: freshrss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: freshrss
        image: lscr.io/linuxserver/freshrss:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: freshrss-http
          protocol: TCP   
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            memory: "50Mi"
            cpu: "250m"
          limits:
            memory: "100Mi"
            cpu: "500m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: freshrss-pvc
          readOnly: false
